# weaver

./: README.md  demo_page_v3.html  doc.example.yml  doc.md  pyproject.toml  requirement.txt  weaver.yml
asset/: snack_game_test.html
asset/text_data_v1/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt
script/: init_cache.py  quick_neo4j_check.py  test_neo4j_connection.py
src/: demo_page_v2 copy.html
src/tools/: generate_TTS.py  generate_i2t.py  generate_t.py  generate_t2i.py
test/it/: conftest.py  test_file_integration.py  test_memory_integration.py
test/ut/: test_chat_route.py  test_cypher_executor.py  test_file_route.py  test_memory_route.py
weaver/: build_memory.py  get_ablum.py  weave_memory.py
weaver/docs/: graph_schema.md
weaver/server/: app.py
weaver/server/routes/: chat_route.py  file_route.py  memory_route.py
weaver/server/services/: chat_service.py  memory_service.py
weaver/server/utils/: file_handler.py  validators.py
weaver/tool_resource/: cypher_executor.py  embedding_retriever.py  file_tool.py  graph_importer.py  schema_reader.py
weaver/util/: add_datetime_to_texts.py  data_loader_v1.py  embedding.py  file.py  init_chat2graph.py  schema.py
